Fix horizontal scrolling issues

--- a/src/Calendar.scss
+++ b/src/Calendar.scss
@@ -19,11 +19,7 @@
     top: 0;
     background: white;
     margin-top: -$spacer * 4;
-    margin-left: -$spacer;
-    margin-right: -$spacer;
     padding-top: $spacer * 4;
-    padding-left: $spacer;
-    padding-right: $spacer;
 
     .btn {
         margin: 0 1px;
